crates/rulesteward-fapolicyd/tests/snapshots/version-target__pattern-bogus__rhel8.snap
---
source: crates/rulesteward-fapolicyd/tests/snapshot_test.rs
expression: rendered
---
parse=ok
diagnostics=1
[fapd-E06] sev=Error line=1 col=1 span=0..37 :: pattern value `bogusxyz` is not valid on the selected --target rhel8 (fapolicyd 1.3.2)
